--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Relational database diagrams, for a video streaming system</h2>
                                             <p>Technologies: Oracle PL/SQL, Oracle SQL Developer.</p>
+                                            <p>College Project</p>
                                             <a href="https://carolinaor10.github.io/BD_Iframe_Proyecto/">View</a>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/db.png" alt="..." />
@@ -146,6 +147,7 @@
                                             <h2 class="fw-bolder">Web App with Wearable Data</h2>
                                             <p>A web application for a pet hotel, offering the added value of connecting to a wearable device for the pet. This device provides data on temperature, humidity, and ultraviolet exposure, creates sound and light alarms in case of emergencies, and feeds the website with data from the device.</p>
                                             <p>Technologies: C#, .NET, Azure, Python, Thony, HTML, CSS, Javascript. </p>
+                                            <p>College Project</p>
                                             <a href="https://github.com/ichivancrCenfotec/ProyectoG2-Petwear">Go to GitHub Repository</a>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/wearable.png" alt="..." />
@@ -185,7 +187,7 @@
     <!-- Linked-In Button-->
     <div class="linkedin-button">
         <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
-            <img src="/assets/img/61109.png" alt="WhatsApp">
+            <img src="/assets/img/in.png" alt="Linked-In">
         </a>
     </div>
 
