--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
             <div class="container protech">
                 <div id="div-serv">
                     <a href="projects.html">
-                        <img src="/assets/img/portfolio/compu_naranja.avif" alt="Projects Image">
+                        <img src="/assets/img/portfolio/compu_1.jpeg" alt="Projects Image">
                         <h2>Projects</h2>
                     </a>
                 </div>
                 <div id="div-serv">   
                     <a href="technologies.html">
-                        <img src="/assets/img/portfolio/compu_naranja_2.avif" alt="Technologies Image">
+                        <img src="/assets/img/portfolio/compu_2.jpeg" alt="Technologies Image">
                         <h2>Technologies</h2>
                     </a>
                 </div>
@@ -221,7 +221,7 @@
          <!-- Linked-In Button-->
          <div class="linkedin-button">
             <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
-              <img src="/assets/img/61109.png" alt="WhatsApp">
+              <img src="/assets/img/in.png" alt="Linked-In">
             </a>
           </div>
 
