--- a/technologies.html
+++ b/technologies.html
@@ -188,7 +188,7 @@
      <!-- Linked-In Button-->
      <div class="linkedin-button">
         <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
-            <img src="/assets/img/61109.png" alt="WhatsApp">
+            <img src="/assets/img/in.png" alt="Linked-In">
         </a>
     </div>
     
