--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="indexSpanish.html">Spanish</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About & Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
@@ -63,8 +64,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
                     <h3 class="section-subheading text-muted">Full-Stack Software Engineer</h3>
-                    <p>I consider myself as a creative and communicate worker. I am expanding my skill set as a Software Development student, pursuing my technology-oriented nature.
-                        I am always looking forward to new opportunities to grow and contribute to my organization. My expertise and my desire for new challenges make me an adaptable professional in different fields.</p>
+                    <p>I am a creative and communicative professional with a focus on software development. I am continuously expanding my skill set and always looking for new opportunities to grow and add value to the projects I participate in. My experience and desire to take on new challenges make me an adaptable professional in different fields, ready to contribute significantly to your organization and projects.</p>
                     <br />
                 </div>
                 <!--Mision/Vision/Values-->
@@ -150,8 +150,9 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">1. Institutional Enterprise Content Management.</p></div>
                             <div class="timeline-body"><p class="text-muted">2. Captured and descriptive records with accurate and comprehensive metadata in an ECM system.</p></div>
-                            <div class="timeline-body"><p class="text-muted">3. Provide user consulting, training and assistance in archival services. Implemented information cycle management practices to data/records capture, storage, and retrieval optimizing organizational efficiency.</p></div>
-                            <div class="timeline-body"><p class="text-muted">4. Ensure compliance with national and international archival laws and regulations.</p></div>
+                            <div class="timeline-body"><p class="text-muted">3. Provide user consulting, training and assistance in archival services.</p></div>
+                            <div class="timeline-body"><p class="text-muted">4. Implemented information cycle management practices to data/records capture, storage, and retrieval optimizing organizational efficiency.</p></div>
+                            <div class="timeline-body"><p class="text-muted">5. Ensure compliance with national and international archival laws and regulations.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -182,13 +183,13 @@
             <div class="container protech">
                 <div id="div-serv">
                     <a href="projects.html">
-                        <img src="/assets/img/portfolio/compu_1.jpeg" alt="Projects Image">
+                        <img src="./assets/img/laptop.webp" alt="Projects Image">
                         <h2>Projects</h2>
                     </a>
                 </div>
                 <div id="div-serv">   
                     <a href="technologies.html">
-                        <img src="/assets/img/portfolio/compu_2.jpeg" alt="Technologies Image">
+                        <img src="./assets/img/laptop.webp" alt="Technologies Image">
                         <h2>Technologies</h2>
                     </a>
                 </div>
@@ -221,7 +222,7 @@
          <!-- Linked-In Button-->
          <div class="linkedin-button">
             <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
-              <img src="/assets/img/in.png" alt="Linked-In">
+              <img src="./assets/img/in.png" alt="Linked-In">
             </a>
           </div>
 
