--- a/projectsSpanish.html
+++ b/projectsSpanish.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Carolina Ortiz Román - Portfolio</title>
+    <title>Carolina Ortiz Román - Portafolio</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
+    <!-- Iconos de Font Awesome (versión gratuita)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
+    <!-- Fuentes de Google-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Nunito:wght@300&family=Poppins:wght@300;400&family=Ysabeau:wght@600&display=swap" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- CSS del tema principal (incluye Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/projects.css" rel="stylesheet" />
 </head>
 <body id="page-top">
     <main class="flex-shrink-0">
-        <!-- Navigation-->
+        <!-- Navegación-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Menú
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="projectsSpanish.html">Spanish</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#about">About & Experience</a></li>
-                        <li class="nav-item"><a class="nav-link" href="technologies.html">Technologies</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">English</a></li>
+                        <li class="nav-item"><a class="nav-link" href="indexSpanish.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="indexSpanish.html#about">Acerca de & Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="technologiesSpanish.html">Tecnologías</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,16 +47,16 @@
             <div class="container h-100">
                 <div class="d-flex h-100 text-center align-items-center">
                     <div class="w-100 text-white">
-                        <h1 class="display-3">Projects</h1>
+                        <h1 class="display-3">Proyectos</h1>
                         <p class="lead mb-0">Carolina Ortiz Román</p>
                         <a href="/assets/documents/Carolina_Ortiz_Resume.pdf" class="btn projects btn-primary btn-lg" download="Carolina_Ortiz_Resume.pdf">
-                            Download Resume
+                            Descargar Currículum
                         </a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- Projects Section-->
+        <!-- Sección de Proyectos-->
         <section class="py-5">
             <div class="container px-5 mb-5">
                 <!--FrontEnd-->
@@ -66,26 +66,26 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <div class="container-center">
-                            <!-- Project Card 1-->
+                            <!-- Tarjeta de Proyecto 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-4">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Landing Page for English Academy</h2>
-                                            <p>Technologies: HTML, CSS, Javascript, Bootstrap.</p>
-                                            <a href="https://hostdecarolinaortizroman.000webhostapp.com/?email=+&message=+&email=caro%40gmail.com&message=mensaje&remember=+#page-top">View</a>
+                                            <h2 class="fw-bolder">Página de aterrizaje para una Academia de Inglés</h2>
+                                            <p>Tecnologías: HTML, CSS, Javascript, Bootstrap.</p>
+                                            <a href="https://hostdecarolinaortizroman.000webhostapp.com/?email=+&message=+&email=caro%40gmail.com&message=mensaje&remember=+#page-top">Ver</a>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/english_check.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
+                            <!-- Tarjeta de Proyecto 2-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-4">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">e-Commerce for a Coffee Shop</h2>
-                                            <p>Technologies: HTML, CSS, Javascript.</p>
+                                            <h2 class="fw-bolder">e-Commerce para una Cafetería</h2>
+                                            <p>Tecnologías: HTML, CSS, Javascript.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/coffe_shop.png" alt="..." />
                                     </div>
@@ -102,28 +102,28 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <div class="container-center">
-                            <!-- Project Card -->
+                            <!-- Tarjeta de Proyecto -->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-4">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Relational database diagrams, for a video streaming system</h2>
-                                            <p>Technologies: Oracle PL/SQL, Oracle SQL Developer.</p>
-                                            <p>College Project</p>
-                                            <a href="https://carolinaor10.github.io/BD_Iframe_Proyecto/">View</a>
+                                            <h2 class="fw-bolder">Diagramas de bases de datos relacionales para un sistema de streaming de video</h2>
+                                            <p>Tecnologías: Oracle PL/SQL, Oracle SQL Developer.</p>
+                                            <p>Proyecto Universitario</p>
+                                            <a href="https://carolinaor10.github.io/BD_Iframe_Proyecto/">Ver</a>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/db.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card -->
+                            <!-- Tarjeta de Proyecto -->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-4">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Exploratory project on data analysis in Tweets</h2>
-                                            <p>Technologies: Python.</p>
-                                            <p>Libraries: Pandas, Numpy, Seaborn, Matplotlib.</p>
+                                            <h2 class="fw-bolder">Proyecto exploratorio de análisis de datos en Tweets</h2>
+                                            <p>Tecnologías: Python.</p>
+                                            <p>Bibliotecas: Pandas, Numpy, Seaborn, Matplotlib.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/twitter.jpeg" alt="..." />
                                     </div>
@@ -140,16 +140,15 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <div class="container-center">
-                            <!-- Project Card 5-->
+                            <!-- Tarjeta de Proyecto 5-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-4">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Web App with Wearable Data</h2>
-                                            <p>A web application for a pet hotel, offering the added value of connecting to a wearable device for the pet. This device provides data on temperature, humidity, and ultraviolet exposure, creates sound and light alarms in case of emergencies, and feeds the website with data from the device.</p>
-                                            <p>Technologies: C#, .NET, Azure, Python, Thony, HTML, CSS, Javascript. </p>
-                                            <p>College Project</p>
-                                            <a href="https://github.com/ichivancrCenfotec/ProyectoG2-Petwear">Go to GitHub Repository</a>
+                                            <h2 class="fw-bolder">Aplicación Web con Datos de Dispositivos Wearable</h2>
+                                            <p>Una aplicación web para un hotel de mascotas, que ofrece el valor agregado de conectarse a un dispositivo wearable para la mascota. Este dispositivo proporciona datos sobre temperatura, humedad y exposición a rayos ultravioleta, crea alarmas sonoras y luminosas en caso de emergencias, y alimenta el sitio web con los datos del dispositivo.</p>
+                                            <p>Tecnologías: C#, .NET, Azure, Python, Thony, HTML, CSS, JavaScript.</p>
+                                            <p>Proyecto de Internado</p>
                                         </div>
                                         <img class="img-fluid" src="assets/img/portfolio/wearable.png" alt="..." />
                                     </div>
@@ -160,18 +159,17 @@
                 </div>
             </div>
         </section>
-
-        <!-- Call to action section-->
-        <section class="py-5 bg-gradient-primary-to-secondary text-white">
-            <div class="container px-5 my-5">
-                <div class="text-center">
-                    <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <p class="email">caro.hncl@gmail.com</p>
-                    <!-- <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>-->
-                </div>
-            </div>
-        </section>
     </main>
+    <!-- Call to action section-->
+    <section class="py-5 bg-gradient-primary-to-secondary text-white">
+        <div class="container px-5 my-5">
+            <div class="text-center">
+                <h2 class="display-4 fw-bolder mb-4">Construyamos Software Juntos</h2>
+                <p class="email">caro.hncl@gmail.com</p>
+                <!-- <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>-->
+            </div>
+        </div>
+    </section>
       <!-- Footer-->
       <footer class="footer py-4">
         <div class="container">
@@ -184,7 +182,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Linked-In Button-->
     <div class="linkedin-button">
         <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
