--- a/technologiesSpanish.html
+++ b/technologiesSpanish.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Carolina Ortiz Román - Portfolio</title>
+    <title>Carolina Ortiz Román - Portafolio</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
+    <!-- Iconos de Font Awesome (versión gratuita)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
+    <!-- Fuentes de Google-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Nunito:wght@300&family=Poppins:wght@300;400&family=Ysabeau:wght@600&display=swap" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- CSS del tema principal (incluye Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/technologies.css" rel="stylesheet" />
-
 </head>
 <body id="page-top">
-    <!-- Navigation-->
+    <!-- Navegación-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Alternar navegación">
+                Menú
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="technologiesSpanish.html">Spanish</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#about">About & Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="technologies.html">English</a></li>
+                    <li class="nav-item"><a class="nav-link" href="indexSpanish.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="indexSpanish.html#about">Sobre mí y Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projectsSpanish.html">Proyectos</a></li>
                 </ul>
             </div>
         </div>
@@ -47,41 +46,41 @@
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
-                    <h1 class="display-3">Technologies</h1>
+                    <h1 class="display-3">Tecnologías</h1>
                     <p class="lead mb-0">Carolina Ortiz Román</p>
                     <a href="/assets/documents/Carolina_Ortiz_Resume.pdf" class="btn projects btn-primary btn-lg" download="Carolina_Ortiz_Resume.pdf">
-                        Download Resume
+                        Descargar CV
                     </a>
                 </div>
             </div>
         </div>
     </header>
     <section>
-        <!-- Skillset Card-->
+        <!-- Tarjeta de habilidades-->
         <div class="card mb-5">
             <div class="card-body p-5">
-                <!-- Professional skills list-->
+                <!-- Lista de habilidades profesionales-->
                 <div class="mb-5">
                     <div class="d-flex align-items-center mb-4">
                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="fa-solid fa-briefcase"></i></div>
-                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Expertise</span></h3>
+                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Especialidades</span></h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">Full Stack Software Development</div></div>
-                        <div class="col"><div class="skill-card">Database Management</div></div>
-                        <div class="col"><div class="skill-card">Enterprise Content Management</div></div>
+                        <div class="col"><div class="skill-card">Desarrollo de Software Full Stack</div></div>
+                        <div class="col"><div class="skill-card">Gestión de Bases de Datos</div></div>
+                        <div class="col"><div class="skill-card">Gestión de Contenidos Empresariales</div></div>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">Department Administration</div></div>
-                        <div class="col"><div class="skill-card">Project Leadership</div></div>
-                        <div class="col"><div class="skill-card">Customer Service</div></div>
+                        <div class="col"><div class="skill-card">Administración de Departamentos</div></div>
+                        <div class="col"><div class="skill-card">Liderazgo de Proyectos</div></div>
+                        <div class="col"><div class="skill-card">Atención al Cliente</div></div>
                     </div>
                 </div>
-                <!-- Languages list-->
+                <!-- Lista de lenguajes-->
                 <div class="mb-5">
                     <div class="d-flex align-items-center mb-4">
                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="fa-solid fa-code"></i></div>
-                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
+                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Lenguajes</span></h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
                         <div class="col"><div class="skill-card">HTML</div></div>
@@ -98,11 +97,11 @@
                         <div class="col"><div class="skill-card">Node.js</div></div>
                     </div>
                 </div>
-                <!-- Database list-->
+                <!-- Lista de bases de datos-->
                 <div class="mb-5">
                     <div class="d-flex align-items-center mb-4">
                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="fa-solid fa-database"></i></div>
-                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Database Knowledge</span></h3>
+                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Conocimientos de Bases de Datos</span></h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
                         <div class="col"><div class="skill-card">MySQL</div></div>
@@ -114,11 +113,11 @@
                         <div class="col"><div class="skill-card">PL/SQL Oracle</div></div>
                     </div>
                 </div>
-                <!-- OS list-->
+                <!-- Lista de sistemas operativos-->
                 <div class="mb-5">
                     <div class="d-flex align-items-center mb-4">
                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="fa-solid fa-laptop-code"></i></div>
-                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Operating Systems</span></h3>
+                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Sistemas Operativos</span></h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
                         <div class="col"><div class="skill-card">Microsoft Windows</div></div>
@@ -129,35 +128,21 @@
                         <div class="col"><div class="skill-card">macOS</div></div>
                     </div>
                 </div>
-                <!-- Tools list-->
+                <!-- Lista de herramientas-->
                 <div class="mb-5">
                     <div class="d-flex align-items-center mb-4">
                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="fa-solid fa-tools"></i></div>
-                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Tools</span></h3>
+                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas</span></h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">VS Code</div></div>
-                        <div class="col"><div class="skill-card">Visual Studio</div></div>
-                        <div class="col"><div class="skill-card">IntelliJ</div></div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">Oracle SQL Developer</div></div>
-                        <div class="col"><div class="skill-card">SQL Management Studio</div></div>
-                        <div class="col"><div class="skill-card">GitHub</div></div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">Bitbucket</div></div>
-                        <div class="col"><div class="skill-card">Postman</div></div>
+                        <div class="col"><div class="skill-card">Git/GitHub</div></div>
                         <div class="col"><div class="skill-card">Jira</div></div>
+                        <div class="col"><div class="skill-card">Confluence</div></div>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">Trello</div></div>
-                        <div class="col"><div class="skill-card">Azure DevOps</div></div>
-                        <div class="col"><div class="skill-card">UML</div></div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-md-3 mb-4">
-                        <div class="col"><div class="skill-card">BPMN</div></div>
-                        <div class="col"><div class="skill-card">Microsoft Office</div></div>
+                        <div class="col"><div class="skill-card">Figma</div></div>
+                        <div class="col"><div class="skill-card">Postman</div></div>
+                        <div class="col"><div class="skill-card">Docker</div></div>
                     </div>
                 </div>
             </div>
@@ -167,27 +152,26 @@
     <section class="py-5 bg-gradient-primary-to-secondary text-white">
         <div class="container px-5 my-5">
             <div class="text-center">
-                <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
+                <h2 class="display-4 fw-bolder mb-4">Construyamos Software Juntos</h2>
                 <p class="email">caro.hncl@gmail.com</p>
                 <!-- <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>-->
             </div>
         </div>
     </section>
-        <!-- Footer-->
-        <footer class="footer py-4">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start"> &copy; Carolina Ortiz Román 2024</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/carolinaor10" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+      <!-- Footer-->
+      <footer class="footer py-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-4 text-lg-start"> &copy; Carolina Ortiz Román 2024</div>
+                <div class="col-lg-4 my-3 my-lg-0">
+                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/carolinaor10" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-        </footer>
-
-     <!-- Linked-In Button-->
-     <div class="linkedin-button">
+        </div>
+    </footer>
+    <!-- Linked-In Button-->
+    <div class="linkedin-button">
         <a href="https://www.linkedin.com/in/carolina-ortiz-roman-43463319a/" target="_blank">
             <img src="./assets/img/in.png" alt="Linked-In">
         </a>
