--- a/projectsSpanish.html
+++ b/projectsSpanish.html
@@ -42,7 +42,7 @@
         <header>
             <div class="overlay projects"></div>
             <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                <source src="/assets/img/fondo_header.mp4" type="video/mp4">
+                <source src="./assets/img/fondo_header.mp4" type="video/mp4">
             </video>
             <div class="container h-100">
                 <div class="d-flex h-100 text-center align-items-center">
