--- a/paletas.html
+++ b/paletas.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html" data-translate="nav.home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#about" data-translate="nav.about">Lu-Art</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-translate="nav.gallery">Galería</a></li>
-                    <li class="nav-item"><a class="nav-link" href="shop.html" data-translate="nav.shop">Tienda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tienda.html" data-translate="nav.shop">Tienda</a></li>
                     <li class="nav-item">
                         <button id="lang-toggle" class="btn btn-outline-light btn-sm ms-2" type="button">
                             <i class="fas fa-language"></i> <span data-translate="nav.language">ES</span>
